--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>PSU HTML Forms Lab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container m-2">
         <form action="www.google.com" method="post">
             <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" placeholder="Enter First Name" required/>
-            <input type="submit" value="Submit Me">
+            <input type="text" name="firstName" id="firstName" placeholder="Enter First Name" onblur="verifyFirstNameIsNotBlank()" required/>
+            <input type="submit" value="Submit Me" onclick="onSubmitClick()">
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
                 <label class="form-check-label" for="flexRadioDefault1">
@@ -50,6 +51,29 @@
             <input type="range" name="range-step" class="form-range" min="0" max="5" step="0.5" id="customRange3">
         </form>
     </div>
+    <div class="container" id="transportationIcons">
+        <h2>Transportation Icons</h2>
+        <i class="fa fa-train" aria-hidden="true"></i> Train <br>
+        <i class="fa fa-bus" aria-hidden="true"></i> Bus <br>
+        <i class="fa fa-plane" aria-hidden="true"></i> Plane <br>
+        <i class="fa fa-car" aria-hidden="true"></i> Car <br>
+    </div>
+    <script type="application/javascript">
+        function onSubmitClick() {
+            verifyFirstNameIsNotBlank()
+            var firstName = document.getElementById("firstName").value
+            alert("Hello " + firstName)
+        }
+
+        function verifyFirstNameIsNotBlank(){
+            var x = document.getElementById("firstName").value
+            if(x == ''){
+                alert("Please enter your first name")
+            } else{
+                console.log("first name is valid")
+            }
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
